--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,7 @@
 :root {
     --main-color: #5280e2;
     --secondary-color: #e5ecfb;
+    --third-color: #b5ccff
 }
 
 @import "fonts";
@@ -13,6 +14,8 @@
 
 body {
     box-sizing: border-box;
-    font-family: "Montserrat Medium", sans-serif;
+    font-family: "Inter Light", sans-serif;
+
+    overflow-x: hidden;
 }
 
